# lib_designPatterns

./: CMakeLists.txt  main.cpp
include/: Adapter.h  Facade.h  Optional.h  TC_Adapter.h  TC_Facade.h  Variant.h
src/: TC_Adaptor.cpp  TC_Facade.cpp
